@@ -26,8 +26,25 @@ then
 fi
 
 # if you've executed sbt assembly previously it will use that instead.
-export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
-ags="generate -t modules/openapi-generator/src/main/resources/flaskConnexion -i modules/openapi-generator/src/test/resources/3_0/petstore.yaml -g python-flask -o samples/server/petstore/flaskConnexion -Dservice $@"
+input=modules/openapi-generator/src/test/resources/3_0/petstore.yaml
+out_folder=samples/openapi3/server/petstore/python-flask
+resources=modules/openapi-generator/src/main/resources/python-flask
 
-rm -rf samples/server/petstore/flaskConnexion/*
+# if you've executed sbt assembly previously it will use that instead.
+export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties -Dservice"
+ags="generate -t $resources -i $input -g python-flask -o $out_folder $@"
+
+rm -rf $out_folder/.openapi*
+rm -rf $out_folder/openapi_server
+rm $out_folder/.dockerignore
+rm $out_folder/.gitignore
+rm $out_folder/.travis.yml
+rm $out_folder/Dockerfile
+rm $out_folder/git_push.sh
+rm $out_folder/README.md
+rm $out_folder/requirements.txt
+rm $out_folder/setup.py
+rm $out_folder/test-requirements.txt
+rm $out_folder/tox.ini
+
 java $JAVA_OPTS -jar $executable $ags
